lab1/Test/L1-A-7-96.cmm
float SX82C9syPKg3N4Gc 
;
struct {
  int J66Tkx9i7631 ;
  struct {
    struct pB {
      int VJzpc ;
      int ORdi7xgXwo0mxXY4z1no ;
    }IS6kE2UnkZ ;
    int Du5Tjn ;
  }h7 ;
  int p8 ;
  int JdD9071uBS3 ;
}pM0fFAK2P6v5tSq6g6 ( int sRS0nRfhV5 ) {
  int RyJ5LFyr ;
  struct ZtJeJt2ygsg17 b2P ;
}
struct {
  int AzzEc , f3Y5noBKqb_HU [ 627289095 ] = JleEpL 
    || RVvEREg9 < btGGnJLBFxRrXriru + r1M6A / wD0AjE [ 
    JbXS5en8F2 = w8 && Wab7 <= L5Tzg / ZtT6WzOuyEkOh ( 
    XjBHRfa13iGKgKkWVh , oxnP7i_Mq1awyWiklv || mHFxgPjV 
    && EN9Hu4O8s - rqRRTPC4mKRS / ( Qh >= leF54hz7EZ [ 
    f0B || rF7HYxThFsE4cdW > vz ] != wkQGF69xRafIPWZ9Ho 
    ) == `! 620811191.961331501 . dYQCRV ) - ! 2067170213 
    * - ! Lx6pKYhORwIcSinRROFM ( ) ] ;
};
int HftO6Lq_eKupP , DkhUvT4u 

;
int RV ( ) {
  while ( IQfWa )   if ( nHy65OT7KzRHS )   tvwadM 
    ;
else {
    h3JsCdKGJGEIBhkQUmda ;
    if ( IKU0HHPWI7 )     BQt7VIoK ;
else     if ( aOy )     qp9tk62V202fLr ;


    lDMyHDUoxYM ;
{
      while ( uWSBWw )       xwbpvA5 ;

    }{
    }    b1gNTIhDBsESQ1w ;
  }

  if ( szSucLcli4RXvaB )   if ( E5t2kT05DwL )   while 
    ( Q5gNv5khzcGvn0If ) {
    fVywS7WIPX ;
  }
else   mEmj0746Z ;


}
int Oq ( int SB2y , int nY1nxz6ptTRKRUyAmdC1 ) {
}
int ;
int cnULe9H2sNBzv6ICdY ( ) {
  return cib ;
}
#